# btc-intelligence-hub

./: .env.example  .gitignore  PRD.md  README.md  btc-intel-trading-module-v2.md
backend/: .env.example  pyproject.toml
backend/btc_intel/: __init__.py  cli.py  config.py  db.py  main.py
backend/btc_intel/analysis/: alerts.py  backtesting.py  confluence_detector.py  cycle_score.py  cycles.py  derivatives.py  macro.py  onchain.py  patterns.py  risk.py  sentiment.py  signal_classifier.py  technical.py  time_analysis.py
backend/btc_intel/conclusions/: manager.py
backend/btc_intel/context/: builder.py  formatters.py  templates.py
backend/btc_intel/data/: btc_loader.py  cycles_seed.py  derivatives_loader.py  events_seed.py  macro_loader.py  onchain_loader.py  retry.py  sentiment_loader.py  updater.py
backend/btc_intel/reports/: ai_generator.py  generator.py
backend/btc_intel/trading/: __init__.py  candle_patterns.py  enhanced_tpsl.py  extended_scorer.py  setup_detector.py
backend/btc_intel/trading/fibonacci/: __init__.py  confluence_detector.py  fibonacci_engine.py  swing_finder.py
backend/btc_intel/trading/levels/: __init__.py  level_manager.py  level_scorer.py  psychological.py  role_flip.py  swing_detector.py  volume_zones.py  zone_clusterer.py
backend/scripts/: check_alerts.sh  fix_cycle_bottoms.py
backend/tests/: conftest.py  test_alerts.py  test_conclusions.py  test_context_builder.py  test_cycle_score.py  test_signal_classifier.py
docs/: cli-reference.md  cycle-score-methodology.md  data-sources.md  setup.md
frontend/: index.html  package.json  (+1 more)
(+68 files in other folders)
